# project_fur_felis_catus_publication_plots

./: LICENSE  README.md  git_subclone.py
human-comparison-plot/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
human-comparison-plot/.devcontainer/: devcontainer.json
human-comparison-plot/data/cbioportal_mutation_proportions/: b_cell_lymphoma.mutation_proportions.txt  basal_cell_carcinoma.mutation_proportions.txt  cSCC.mutation_proportions.txt  mammary_gland_carcinoma.mutation_proportions.txt  meningioma.mutation_proportions.txt  osteosarcoma.mutation_proportions.txt
human-comparison-plot/data/cosmic/: .gitignore
human-comparison-plot/data/feb_2025_cohorts/MSK-CHORD/: msk_chord.colorectal_carcinoma.mutation_proportions.txt  msk_chord.gene_list.txt  msk_chord.mammary_carcinoma.mutation_proportions.txt
human-comparison-plot/data/feb_2025_cohorts/MSK-IMPACT/: msk_impact.cscc.mutation_proportions.txt  (+6 more)
human-comparison-plot/data/fur_mafs/: fur_cat.gene_list.txt  keep_vaf_size_filt_matched_6713_2821.finalised.maf  keep_vaf_size_filt_matched_6841_2964.finalised.maf  keep_vaf_size_filt_matched_6945_3142_2025_02_10.hotspot_mutations.maf  keep_vaf_size_filt_matched_6973_2987.finalised.maf  keep_vaf_size_filt_matched_7097_3073.finalised.maf  keep_vaf_size_filt_matched_7098_3140.finalised.maf
human-comparison-plot/notebooks/: supplementary_tables.ipynb
human-comparison-plot/results/human-comparison/: CTNNB1.fur2cosmic.tsv  GTF2I.fur2cosmic.tsv  TP53.fur2cosmic.tsv
human-comparison-plot/results/supplementary-tables/: Supplementary_Table_Significant_Genes.csv
human-comparison-plot/src/fur2cosmic/: __init__.py  __main__.py  exceptions.py
human-comparison-plot/tests/: conftest.py
(+1760 files in other folders)
